feat: Add data-x-id on nodes, ports and links

--- a/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
+++ b/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
@@ -1,4 +1,5 @@
 ﻿<div class="port @Port.Alignment.ToString().ToLower() @(Port.Links.Count > 0 ? "has-links" : "") @Class"
+     data-port-id="@Port.Id"
      @ref="_element"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
