--- a/src/Blazor.Diagrams/Components/LinkVertexWidget.razor
+++ b/src/Blazor.Diagrams/Components/LinkVertexWidget.razor
@@ -3,6 +3,7 @@
         r="5"
         fill="@ColorToUse"
         cursor="move"
+        @ondblclick="OnDoubleClick"
         @onmousedown="OnMouseDown"
         @onmousedown:stopPropagation
         @onmouseup="OnMouseUp"
