--- a/src/Blazor.Diagrams/Components/DefaultLinkLabelWidget.razor
+++ b/src/Blazor.Diagrams/Components/DefaultLinkLabelWidget.razor
@@ -4,6 +4,6 @@
     [Parameter] public LinkLabelModel Label { get; set; }
     [Parameter] public Point Position { get; set; }
 
-    private double X => Position.X - (Label.Offset?.X ?? 0);
-    private double Y => Position.Y - (Label.Offset?.Y ?? 0);
+    private double X => Position.X + (Label.Offset?.X ?? 0);
+    private double Y => Position.Y + (Label.Offset?.Y ?? 0);
 }
