fix: MouseUp event bubbles up from PortModel to NodeModel

--- a/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
+++ b/src/Blazor.Diagrams/Components/Renderers/PortRenderer.razor
@@ -3,6 +3,7 @@
      @ref="_element"
      @onmousedown="OnMouseDown"
      @onmousedown:stopPropagation
-     @onmouseup="OnMouseUp">
+     @onmouseup="OnMouseUp"
+     @onmouseup:stopPropagation>
     @ChildContent
 </div>
