refactor: rename Navigator to NavigatorWidget

--- a/src/Blazor.Diagrams/Components/NavigatorWidget.razor
+++ b/src/Blazor.Diagrams/Components/NavigatorWidget.razor
@@ -1,6 +1,4 @@
-﻿@inherits NavigatorComponent
-
-@if (DiagramManager.Container != null)
+﻿@if (DiagramManager.Container != null)
 {
     var addedNodeX = Math.Max(0, DiagramManager.Pan.X);
     var addedNodeY = Math.Max(0, DiagramManager.Pan.Y);
