--- a/samples/SharedDemo/Demos/Grouping.razor
+++ b/samples/SharedDemo/Demos/Grouping.razor
@@ -18,7 +18,7 @@
 <CascadingValue Name="DiagramManager" Value="diagramManager">
     <DiagramCanvas>
         <Widgets>
-            <Navigator Width="300" Height="200" DefaultStyle="true"></Navigator>
+            <NavigatorWidget Width="300" Height="200" DefaultStyle="true"></NavigatorWidget>
         </Widgets>
     </DiagramCanvas>
 </CascadingValue>
